:lipstick: add empty text when no monster on a profile, reduce gap between grade icon and text on member profile and fix member page don't reload when member updating

--- a/apps/front/src/assets/css/components/_member-profile.scss
+++ b/apps/front/src/assets/css/components/_member-profile.scss
@@ -45,7 +45,7 @@
   &__grade {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     font-size: functions.rem(16);
     text-transform: capitalize;
 
